Add new data classes + fixed dataset test